@@ -1,3 +1,13 @@
+2007-10-01  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* slime-typeout-frame.el: Messages in the typeout frame were too
+	easily overwritten by `slime-autodoc'. Fix that.
+	Reported by Geoff Wozniak.
+	
+	(slime-typeout-message-aux): Split out from `slime-typeout-message'.
+	(slime-typeout-message): Wrapper around it. Additionally disable
+	the autodoc timer temporarily.
+
 2007-09-30  Geoff Wozniak  <geoff@wozniak.ca>
 
 	* slime-typeout-frame.el (slime-typeout-frame-init): Fix quoted
